# k8s-guard

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: init-new.yaml  init-old.yaml  new.yaml  old.yaml  only-new.yaml  only-old.yaml  selector-expr-new.yaml  selector-expr-old.yaml  selector-new.yaml  selector-old.yaml
src/: cli.rs  main.rs
src/diff/: match_workloads.rs  mod.rs
src/manifest/: mod.rs  normalize.rs  parser.rs
src/model/: finding.rs  mod.rs  workload.rs
src/report/: json.rs  mod.rs  text.rs
src/rules/: kdx001_memory_limit_reduced.rs  kdx002_memory_request_increased.rs  kdx003_cpu_reduced.rs  kdx004_readiness_stricter.rs  kdx005_liveness_without_startup.rs  kdx006_image_pull_risk.rs  kdx007_env_removed.rs  kdx008_config_ref_changed.rs  kdx009_scheduling_tightened.rs  kdx010_replica_pressure.rs  kdx011_selector_changed.rs  mod.rs  traits.rs  util.rs
tests/: cli_smoke.rs
