[package]
name = "k8s-guard"
version = "0.1.0"
edition = "2024"
description = "Deterministic rollout risk explainer for Kubernetes manifest diffs"
license = "MIT"
readme = "README.md"

[[bin]]
name = "k8s-diff-explainer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
itertools = "0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
